# simple-pytree

./: README.md  pyproject.toml
.github/workflows/: run-tests.yml
scripts/: update_version.py
simple_pytree/: __init__.py  dataclass.py  ids.py  pytree.py  ref.py  tracers.py
tests/: test_pytree.py  test_ref.py
